
########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2016-XX-XX (minor)
  		# Resolve the "milestone for blocked editor" issue; [[WP:BEANS]] (T#057)
  		# The edit comment for an AIV posting regarding a registered user 
  			will link to that user's contributions, not their talk page
  		# Minor changes and test suite for IRC feeds
  		# Building in (redundant?) checks to ensure that rollback/edit 
  			tokens are acquired; still addressing session drop/fail issues
  
  * 2016-08-14
  		# The "ignore" button (adjacent to the "user" line of the "metadata 
  			panel") enables a session-length ignore of edits made by a particular
  			user (e.g., repeated maintenance tasks that are not vandalism). 
  			The ignore list resets when STiki is restarted. The link will change
  			from a blue "ignore" to red "ignored" if the action succeeds (T#053). 
  		# Implemented API "thank" functionality. A revision/editor can be
  			"thanked" by using the button adjacent to the "REVISION_ID" line
  			of the "metadata panel".  "Thanking" is tied to specific revision-ids,
  			justifying this placement. It was not made an explicit classification
  			button and tied to the "innocent" outcome as such a promotion seems
  			like mission-creep for an anti-vandalism tool. The link will change
  			from a blue "thank" to red "thanked" if the action is successful.
  			Note that only registered editors can be thanked, and the link will
  			be hidden for edits made by unregistered users (T#055).
  		# The fact an article is CSD ("candidate for speedy deletion") can now
  			be noted atop diffs, similar to how the "this will rollback 'n' edits"
  			note already appears. This functionality is enabled by default, 